--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIRA - AI Rumah</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
 
@@ -45,6 +45,6 @@
 
 </div>
 
-<script src="app.js"></script>
+<script src="static/apps.js"></script>
 </body>
 </html>
