--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIRA - AI Rumah</title>
-    <link rel="stylesheet" href="static/style.css">
+
+    <!-- WAJIB pakai url_for untuk Flask -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
@@ -45,6 +47,8 @@
 
 </div>
 
-<script src="static/app.js"></script>
+<!-- WAJIB pakai url_for untuk Flask -->
+<script src="{{ url_for('static', filename='app.js') }}"></script>
+
 </body>
 </html>
